reports/queries/firewall-rules.json
$ gcloud compute firewall-rules list --format=json ;

[
  {
    "allowed": [
      {
        "IPProtocol": "tcp",
        "ports": [
          "80",
          "443"
        ]
      }
    ],
    "creationTimestamp": "2025-03-24T12:15:53.771-07:00",
    "description": "",
    "direction": "INGRESS",
    "disabled": false,
    "id": "1234567890123456789",
    "kind": "compute#firewall",
    "logConfig": {
      "enable": false
    },
    "name": "allow-http-https",
    "network": "https://www.googleapis.com/compute/v1/projects/<project-name>/global/networks/example-vpc",
    "priority": 1000,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/<project-name>/global/firewalls/allow-http-https",
    "sourceRanges": [
      "0.0.0.0/0"
    ]
  },
  {
    "allowed": [
      {
        "IPProtocol": "tcp",
        "ports": [
          "22"
        ]
      }
    ],
    "creationTimestamp": "2025-03-24T12:15:53.780-07:00",
    "description": "",
    "direction": "INGRESS",
    "disabled": false,
    "id": "9876543210987654321",
    "kind": "compute#firewall",
    "logConfig": {
      "enable": false
    },
    "name": "allow-ssh-iap",
    "network": "https://www.googleapis.com/compute/v1/projects/<project-name>/global/networks/example-vpc",
    "priority": 1000,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/<project-name>/global/firewalls/allow-ssh-iap",
    "sourceRanges": [
      "35.235.240.0/20"
    ],
    "targetTags": [
      "ssh-access"
    ]
  },
  {
    "allowed": [
      {
        "IPProtocol": "tcp",
        "ports": [
          "22"
        ]
      }
    ],
    "creationTimestamp": "2025-03-24T12:15:53.769-07:00",
    "description": "",
    "direction": "INGRESS",
    "disabled": false,
    "id": "1928374655647382910",
    "kind": "compute#firewall",
    "logConfig": {
      "enable": false
    },
    "name": "allow-ssh-restricted",
    "network": "https://www.googleapis.com/compute/v1/projects/<project-name>/global/networks/example-vpc",
    "priority": 1000,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/<project-name>/global/firewalls/allow-ssh-restricted",
    "sourceRanges": [
      "35.235.240.0/20",
      "10.1.0.0/8",
      "198.51.100.24"
    ],
    "targetTags": [
      "ssh-access"
    ]
  },
  {
    "allowed": [
      {
        "IPProtocol": "tcp",
        "ports": [
          "80"
        ]
      }
    ],
    "creationTimestamp": "2025-03-22T21:04:00.882-07:00",
    "description": "",
    "direction": "INGRESS",
    "disabled": false,
    "id": "9081726351827364501",
    "kind": "compute#firewall",
    "logConfig": {
      "enable": false
    },
    "name": "default-allow-http",
    "network": "https://www.googleapis.com/compute/v1/projects/<project-name>/global/networks/default",
    "priority": 1000,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/<project-name>/global/firewalls/default-allow-http",
    "sourceRanges": [
      "0.0.0.0/0"
    ],
    "targetTags": [
      "http-server"
    ]
  },
  {
    "allowed": [
      {
        "IPProtocol": "icmp"
      }
    ],
    "creationTimestamp": "2025-03-22T19:50:18.695-07:00",
    "description": "Allow ICMP from anywhere",
    "direction": "INGRESS",
    "disabled": false,
    "id": "5678901234567890123",
    "kind": "compute#firewall",
    "logConfig": {
      "enable": false
    },
    "name": "default-allow-icmp",
    "network": "https://www.googleapis.com/compute/v1/projects/<project-name>/global/networks/default",
    "priority": 65534,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/<project-name>/global/firewalls/default-allow-icmp",
    "sourceRanges": [
      "0.0.0.0/0"
    ]
  }
]
